# OS-apps

./: .gitignore  README.md
Camera/: CMakeLists.txt
Camera/include/: pff.h
Camera/src/: cameraview.cpp  cameraview.h  main.cpp  mainwindow.cpp  mainwindow.h  settingsmenu.cpp  settingsmenu.h
DaCoder/: CMakeLists.txt
DaCoder/src/: main.cpp
File manger/: file_manager.pro
File manger/include/: ImageViewer.h  MainWindow.h  TextEditor.h
File manger/resources/: style.qss
File manger/sandbox/Documents/: todo.txt
File manger/sandbox/Documents/Personal/: Journal.txt
File manger/sandbox/Projects/Antigravity-Engine/: README.md
File manger/sandbox/Projects/Antigravity-Engine/include/: engine.h
File manger/sandbox/Projects/Antigravity-Engine/src/: engine.cpp  main.cpp
File manger/sandbox/Projects/Cyber-Dashboard/: app.js  index.html  style.css
File manger/src/: ImageViewer.cpp  MainWindow.cpp  TextEditor.cpp  main.cpp
My Images/: CMakeLists.txt
My Images/src/: gallerywindow.cpp  gallerywindow.h  main.cpp  pff.cpp
PaperPad/: CMakeLists.txt
PaperPad/include/core/: Application.hpp  Buffer.hpp  Editor.hpp  EditorCtrl.hpp  FindDialog.hpp  MainWindow.hpp  MenuBar.hpp  SidebarCtrl.hpp  UndoRedo.hpp
PaperPad/include/io/: Config.hpp  FileHandler.hpp
PaperPad/include/ui/: Console.hpp  Dialog.hpp  FileExplorer.hpp  MenuBar.hpp  StatusBar.hpp  TextArea.hpp  Window.hpp
PaperPad/include/utils/: Logger.hpp  Types.hpp
PaperPad/src/: main.cpp
PaperPad/src/core/: Application.cpp  Buffer.cpp  Editor.cpp  EditorCtrl.cpp  FindDialog.cpp  MainWindow.cpp  MenuBar.cpp  SidebarCtrl.cpp  UndoRedo.cpp
PaperPad/src/io/: Config.cpp  FileHandler.cpp
PaperPad/src/ui/: Console.cpp  Dialog.cpp  FileExplorer.cpp  MenuBar.cpp  StatusBar.cpp  TextArea.cpp
PaperPad/src/utils/: Logger.cpp
Polo/: .gitignore  Polo.pro  README.md
Polo/assets/: polo.qrc  polo_bashrc  theme.qss
Polo/docs/: architecture.md  commands.md  pty-backend.md
Polo/scripts/: build-linux.sh  build-windows.bat  run-linux.sh  run-windows.bat
Polo/src/app/: main.cpp
Polo/src/core/: CommandParser.cpp  CommandParser.h  History.cpp  History.h  PathTools.cpp  PathTools.h  PtySession.cpp  PtySession.h  ShellSession.cpp  ShellSession.h
Polo/src/render/: Clip3DWidget.cpp  Clip3DWidget.h
Polo/src/ui/: TerminalHighlighter.cpp  TerminalHighlighter.h  TerminalTab.cpp  TerminalTab.h  TerminalView.cpp  TerminalView.h  TerminalWindow.cpp  TerminalWindow.h  TopBar.cpp  TopBar.h
Task monitor/: TaskMonitor.pro
Task monitor/resources/: resources.qrc
Task monitor/src/: main.cpp
Task monitor/src/core/: SystemInfo.cpp  SystemInfo.h
Task monitor/src/ui/: CircularProgressBar.cpp  CircularProgressBar.h  MainWindow.cpp  MainWindow.h
